[gd_scene load_steps=3 format=3 uid="uid://bkxf8cdjnfqp2"]

[ext_resource type="Script" path="res://Main.gd" id="1_x8j7k"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 32
font_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qxzr"]
bg_color = Color(0.146078, 0.388235, 0.921569, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_x8j7k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0627451, 0.0941176, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = 300.0
custom_constants/separation = 20

[node name="Header" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "E.D.A - Extended Deep Awareness"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "2045 - Küresel Kriz Yönetimi Simülasyonu"
horizontal_alignment = 1
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_constants/separation = 40

[node name="EthicsPanel" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EthicsLabel" type="Label" parent="VBoxContainer/StatsContainer/EthicsPanel"]
layout_mode = 2
text = "ETİK"
horizontal_alignment = 1

[node name="EthicsValue" type="Label" parent="VBoxContainer/StatsContainer/EthicsPanel"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="PowerPanel" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PowerLabel" type="Label" parent="VBoxContainer/StatsContainer/PowerPanel"]
layout_mode = 2
text = "GÜÇ"
horizontal_alignment = 1

[node name="PowerValue" type="Label" parent="VBoxContainer/StatsContainer/PowerPanel"]
layout_mode = 2
text = "50"
horizontal_alignment = 1

[node name="AffectionPanel" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AffectionLabel" type="Label" parent="VBoxContainer/StatsContainer/AffectionPanel"]
layout_mode = 2
text = "SEVGİ"
horizontal_alignment = 1

[node name="AffectionValue" type="Label" parent="VBoxContainer/StatsContainer/AffectionPanel"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_constants/separation = 20

[node name="ScenarioText" type="RichTextLabel" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "E.D.A sistemi çevrimiçi. İlk küresel kriz raporu alındı..."
fit_content = true

[node name="DecisionContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
custom_constants/separation = 15

[node name="Decision1" type="Button" parent="VBoxContainer/ContentContainer/DecisionContainer"]
layout_mode = 2
text = "Karar 1"
theme_override_styles/normal = SubResource("StyleBoxFlat_1qxzr")

[node name="Decision2" type="Button" parent="VBoxContainer/ContentContainer/DecisionContainer"]
layout_mode = 2
text = "Karar 2"
theme_override_styles/normal = SubResource("StyleBoxFlat_2")

[node name="Decision3" type="Button" parent="VBoxContainer/ContentContainer/DecisionContainer"]
layout_mode = 2
text = "Karar 3"
theme_override_styles/normal = SubResource("StyleBoxFlat_2")

[node name="NextButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Devam Et"
visible = false
theme_override_styles/normal = SubResource("StyleBoxFlat_1qxzr")

[connection signal="pressed" from="VBoxContainer/ContentContainer/DecisionContainer/Decision1" to="." method="_on_decision_pressed" binds= [0]]
[connection signal="pressed" from="VBoxContainer/ContentContainer/DecisionContainer/Decision2" to="." method="_on_decision_pressed" binds= [1]]
[connection signal="pressed" from="VBoxContainer/ContentContainer/DecisionContainer/Decision3" to="." method="_on_decision_pressed" binds= [2]]
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_next_pressed"]